# claude-code-demos

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md
.claude-plugin/: marketplace.json
chrome-extension/: CLAUDE.md  README.md  package-lock.json  package.json  server.js
chrome-extension/public/: index.html  listing.html
plugins/caveman-output-style/: README.md
plugins/caveman-output-style/.claude-plugin/: plugin.json
plugins/caveman-output-style/output-styles/: caveman.md
plugins/dependency-demo/: README.md
plugins/dependency-demo-broken/: README.md
plugins/dependency-demo-broken/.claude-plugin/: plugin.json
plugins/dependency-demo/.claude-plugin/: plugin.json
plugins/dependency-demo/commands/: greet-loudly.md
plugins/example-mcps/: .mcp.json  CLAUDE.md  README.md
plugins/example-mcps/.claude-plugin/: plugin.json
plugins/example-mcps/http-server/: package-lock.json  package.json  server.js
plugins/example-mcps/stdio-server/: pyproject.toml  server.py
plugins/http-hooks-dash/: CLAUDE.md  README.md  package-lock.json  package.json  server.js  test-hook.sh
plugins/http-hooks-dash/.claude-plugin/: plugin.json
plugins/http-hooks-dash/hooks/: hooks.json
plugins/http-hooks-dash/public/: index.html
plugins/vision-model-skill/: README.md
plugins/vision-model-skill/.claude-plugin/: plugin.json
plugins/vision-model-skill/skills/vision-model/: SKILL.md
plugins/vision-model-skill/skills/vision-model/references/: data_preparation.md  deployment.md  detection_deep_dive.md  (+1 more)
worktrees-demo/: README.md  settings_for_demo.json
(+8 files in other folders)
