[project]
name = "example-mcp-stdio"
version = "0.0.1"
description = "Example stdio MCP server using the low-level Python SDK"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
]

[tool.uv]
# This is a standalone script, not an installable package.
no-build-isolation = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
